Add store, refactor for modular BEM

--- a/index.html
+++ b/index.html
@@ -13,25 +13,7 @@
     <title>Online courses</title>
   </head>
   <body>
-    <div class="decoration-middle-right"></div>
-    <div class="container">
-      <h6 class="subheading">Enjoy your studying!</h6>
-      <h1 class="heading">Our online courses</h1>
-      <header class="header">
-        <form action="#" class="tags"></form>
-        <form action="#" class="search">
-          <input
-            type="text"
-            class="search__input"
-            placeholder="Search course..."
-          />
-        </form>
-      </header>
-      <main class="main"></main>
-      <div class="load-more">
-        <button class="load-more__button">Load more</button>
-      </div>
-    </div>
+    <div class="app-container"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
